--- a/src/ui/styles/light.css
+++ b/src/ui/styles/light.css
@@ -122,8 +122,8 @@ QTabBar::tab:selected {
     border-bottom-color: #d8d8d8;
 }
 
-QTabBar::tab:hover:!selected {
-    background-color: #dedede;
+QTabBar::tab:hover:selected {
+    background-color: #f30909;
 }
 
 /*------------------------------------------------- Group Box -------------------------------------------------*/
@@ -240,4 +240,11 @@ QMessageBox#training-cancel-dialog QLabel {
 /*------------------------------------------------- Spacer -------------------------------------------------*/
 #spacer {
     background-color: #ffffff;
+}
+
+/*------------------------------------------------- Splitter -------------------------------------------------*/
+#splitter-windows::handle {
+    background-color: #f2f2f2;
+    margin: 10px;
+    width: 2px;
 }
